--- a/getdown-ux-console/src/main/polymer/console/src/job-actions.html
+++ b/getdown-ux-console/src/main/polymer/console/src/job-actions.html
@@ -43,6 +43,14 @@
 			}
 		}
 
+		function jobsUpdated(json) {
+			return {
+				type: 'JOBS_UPDATED',
+				jobs: json,
+				receivedAt: Date.now()
+			}
+		}
+
 		function fetchJobs() {
 			return dispatch => {
 				dispatch(requestJobs())
@@ -54,6 +62,6 @@
 
 		GetdownConsole.actions.fetchJobs=fetchJobs
 		GetdownConsole.actions.addJob=addJobs
-
+		GetdownConsole.actions.jobsUpdated=jobsUpdated
 	}());
 </script>
