validating tasks implemented

--- a/getdown-ux-console/src/main/polymer/console/src/download-view.html
+++ b/getdown-ux-console/src/main/polymer/console/src/download-view.html
@@ -19,11 +19,11 @@
 
 		<div class="card" style="height: 100%">
 
-			<vaadin-split-layout orientation="vertical">
-				<div>
+			<vaadin-split-layout >
+				<div style="width: 34%;">
 					<task-list></task-list>
 				</div>
-				<div>
+				<div style="width: 66%;">
 					<job-list></job-list>
 				</div>
 			</vaadin-split-layout>
