fix task-list selection listener

--- a/getdown-ux-console/src/main/polymer/console/src/job-list.html
+++ b/getdown-ux-console/src/main/polymer/console/src/job-list.html
@@ -25,7 +25,7 @@
 
 		</style>
 
-		<div class="toolbar">
+		<div class="toolbar" style="min-height:40px;">
 			<paper-icon-button icon="cancel" on-tap="_handleCancelTap" hidden$="[[_hideCancel]]"></paper-icon-button>
 			<paper-icon-button icon="refresh" on-tap="_handleRestartTap" hidden$="[[_hideRefresh]]"></paper-icon-button>
 			<paper-icon-button icon="delete" on-tap="_handleDeleteTap" hidden$="[[_hideDelete]]"></paper-icon-button>
