--- a/getdown-ux-console/src/main/polymer/console/src/task-actions.html
+++ b/getdown-ux-console/src/main/polymer/console/src/task-actions.html
@@ -25,6 +25,32 @@
 			}
 		}
 
+		function selectTasks(tasks){
+			return {
+				type: 'TASKS_SELECTED',
+				tasks:tasks
+			}
+		}
+
+		function selectAllTasks(){
+			return {
+				type: 'TASKS_ALL_SELECTED',
+			}
+		}
+
+		function unselectAllTasks(){
+			return {
+				type: 'TASKS_ALL_UNSELECTED',
+			}
+		}
+
+		function unselectTasks(tasks){
+			return {
+				type: 'TASKS_UNSELECTED',
+				tasks:tasks
+			}
+		}
+
 		function removeTasks(tasks){
 			return dispatch =>{
 				postTask()
@@ -92,6 +118,10 @@
 		GetdownConsole.actions.addTasks=addTasks
 		GetdownConsole.actions.removeTasks=removeTasks
 		GetdownConsole.actions.tasksUpdated=tasksUpdated
+		GetdownConsole.actions.selectTasks=selectTasks
+		GetdownConsole.actions.unselectTasks=unselectTasks
+		GetdownConsole.actions.unselectAllTasks=unselectAllTasks
+		GetdownConsole.actions.selectAllTasks=selectAllTasks
 
 	}());
 </script>
