--- a/getdown-ux-console/src/main/polymer/console/src/tasks-reducer.html
+++ b/getdown-ux-console/src/main/polymer/console/src/tasks-reducer.html
@@ -10,7 +10,7 @@
 		return a.handle===b.handle
 	}
 
-	function tasksReducer(state={tasks:[],isAdding:false,isFetching:false},action)
+	function tasksReducer(state={tasks:[],selectedTasks:[],isAdding:false,isFetching:false},action)
 	{
 		switch (action.type) {
 			case 'POST_TASK': {
@@ -23,6 +23,33 @@
 				const items = state.tasks.concat(action.tasks)
 				return Object.assign({}, state, {
 					tasks: items
+				})
+			}
+
+			case 'TASKS_SELECTED': {
+				const items = state.selectedTasks.concat(action.tasks)
+				return Object.assign({}, state, {
+					selectedTasks: items
+				})
+			}
+
+			case 'TASKS_ALL_SELECTED': {
+				const items=state.tasks
+				return Object.assign({}, state, {
+					selectedTasks: items
+				})
+			}
+
+			case 'TASKS_ALL_UNSELECTED': {
+				return Object.assign({}, state, {
+					selectedTasks: []
+				})
+			}
+
+			case 'TASKS_UNSELECTED': {
+				const items = _.differenceWith(state.selectedTasks,action.tasks,compareTasks )
+				return Object.assign({}, state, {
+					selectedTasks: items
 				})
 			}
 
