--- a/getdown-ux-console/src/main/polymer/console/src/job-actions.html
+++ b/getdown-ux-console/src/main/polymer/console/src/job-actions.html
@@ -60,8 +60,38 @@
 			}
 		}
 
+		function selectJobs(jobs){
+			return {
+				type: 'JOBS_SELECTED',
+				jobs:jobs
+			}
+		}
+
+		function selectAllJobs(){
+			return {
+				type: 'JOBS_ALL_SELECTED',
+			}
+		}
+
+		function unselectAllJobs(){
+			return {
+				type: 'JOBS_ALL_UNSELECTED',
+			}
+		}
+
+		function unselectJobs(jobs){
+			return {
+				type: 'JOBS_UNSELECTED',
+				jobs:jobs
+			}
+		}
+
 		GetdownConsole.actions.fetchJobs=fetchJobs
 		GetdownConsole.actions.addJob=addJobs
 		GetdownConsole.actions.jobsUpdated=jobsUpdated
+		GetdownConsole.actions.selectJobs=selectJobs
+		GetdownConsole.actions.unselectJobs=unselectJobs
+		GetdownConsole.actions.unselectAllJobs=unselectAllJobs
+		GetdownConsole.actions.selectAllJobs=selectAllJobs
 	}());
 </script>
