--- a/getdown-ux-console/src/main/polymer/console/src/jobs-reducer.html
+++ b/getdown-ux-console/src/main/polymer/console/src/jobs-reducer.html
@@ -51,6 +51,32 @@
 					lastUpdated: action.receivedAt
 				})
 			}
+			case 'JOBS_SELECTED': {
+				const items = state.selectedJobs.concat(action.jobs)
+				return Object.assign({}, state, {
+					selectedJobs: items
+				})
+			}
+
+			case 'JOBS_ALL_SELECTED': {
+				const items=state.jobs
+				return Object.assign({}, state, {
+					selectedJobs: items
+				})
+			}
+
+			case 'JOBS_ALL_UNSELECTED': {
+				return Object.assign({}, state, {
+					selectedJobs: []
+				})
+			}
+
+			case 'JOBS_UNSELECTED': {
+				const items = _.differenceWith(state.selectedJobs,action.jobs,compareJobs )
+				return Object.assign({}, state, {
+					selectedJobs: items
+				})
+			}
 			default:
 				return state
 		}
