fix state management error that prevented moving files to destination

--- a/getdown-ux-console/src/main/polymer/console/src/job-list.html
+++ b/getdown-ux-console/src/main/polymer/console/src/job-list.html
@@ -6,6 +6,8 @@
 <link rel="import" href="../bower_components/vaadin-grid/vaadin-grid-sorter.html">
 <link rel="import" href="redux-store.html">
 
+<script src="utils.js" type="application/javascript"></script>
+
 <dom-module id="job-list">
 	<template>
 		<style is="custom-style">
