--- a/getdown-ux-console/src/main/polymer/console/src/job-list.html
+++ b/getdown-ux-console/src/main/polymer/console/src/job-list.html
@@ -1,9 +1,9 @@
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../bower_components/vaadin-progress-bar/vaadin-progress-bar.html">
-<link rel="import" href="../bower_components/vaadin-material-theme/vaadin-grid.html">
 <link rel="import" href="../bower_components/vaadin-grid/vaadin-grid.html">
 <link rel="import" href="../bower_components/vaadin-grid/vaadin-grid-column.html">
 <link rel="import" href="../bower_components/vaadin-grid/vaadin-grid-sorter.html">
+<link rel="import" href="../bower_components/vaadin-grid/vaadin-grid-selection-column.html">
 <link rel="import" href="redux-store.html">
 
 <script src="utils.js" type="application/javascript"></script>
@@ -24,6 +24,10 @@
 				flex-direction: row-reverse
 			}
 
+			vaadin-grid#grid{
+				font-size: 10pt !important;
+			}
+
 
 		</style>
 
@@ -34,7 +38,13 @@
 		</div>
 
 
-		<vaadin-grid id="grid" items="[[jobs]]" on-selected-items-changed="_selectedItemsChanged" size="40">
+		<vaadin-grid id="grid"
+		             items="[[jobs]]"
+		             theme="compact"
+		             on-selected-items-changed="_selectedItemsChanged"
+		             size="40"
+		             column-reordering-allowed column-resizing multi-sort >
+
 			<vaadin-grid-selection-column auto-select>
 			</vaadin-grid-selection-column>
 			<vaadin-grid-column resizable>
