--- a/getdown-ux-console/src/main/polymer/console/src/download-view.html
+++ b/getdown-ux-console/src/main/polymer/console/src/download-view.html
@@ -17,7 +17,7 @@
 
 
 
-		<div class="card" style="height: 100%">
+		<div class="card" style="height: 100%;margin: 5px">
 
 			<vaadin-split-layout >
 				<div style="width: 34%;">
